[gd_scene load_steps=6 format=1]

[ext_resource path="res://example/example.gd" type="Script" id=1]
[ext_resource path="res://addons/GDCharts/script.gd" type="Script" id=2]
[ext_resource path="res://addons/GDCharts/icon.png" type="Texture" id=3]
[ext_resource path="res://assets/THSarabunNew.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/graph-plot-white.png" type="Texture" id=5]

[node name="main" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="chart" type="ReferenceFrame" parent="."]

rect/min_size = Vector2( 256, 128 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 166.0
margin/top = 120.0
margin/right = 938.0
margin/bottom = 376.0
script/script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
HISTOBAR_CHART_SPACE = 4.0
HISTOBAR_ROUNDED_RADIUS_MINIMUM = 8
HISTOBAR_ROUNDED_RADIUS_MAXIMUM = 64
label_font = ExtResource( 4 )
MAX_VALUES = 12
dot_texture = ExtResource( 5 )
default_chart_color = Color( 1, 1, 1, 0.8 )
grid_color = Color( 0.0666667, 0.0901961, 0.109804, 0.694118 )
background_color = Color( 0.854902, 0.890196, 0.917647, 0.392157 )
background_color_alternative = Color( 0.607843, 0.639216, 0.666667, 0.392157 )
auto_adjust_dark_mode = true
chart_type = 0
line_width = 2.0
hovered_radius_ratio = 1.1
chart_background_opacity = 0.334
draw_background = true
draw_gradient_background = true
japanese_candle_stick_positive_color = Color( 0, 0.572549, 0.913725, 1 )
japanese_candle_stick_negative_color = Color( 1, 0.388235, 0.388235, 1 )
histogram_tooltip_value = "LABEL_ONLINE_USAGE"
histogram_tooltip_maximum_value = "LABEL_ONLINE_CAPACITY"
histogram_tooltip_percent = "LABEL_SERVER_LOAD"
histogram_foreground_color = Color( 0, 0.572549, 0.913725, 1 )
histogram_background_color = Color( 0.780392, 0.917647, 1, 1 )
histogram_warning_color = Color( 1, 0.388235, 0.388235, 1 )
histogram_margin = 24

[node name="group" type="ButtonGroup" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 122.0
margin/right = 160.0
margin/bottom = 237.0
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="noLabel" type="CheckBox" parent="group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 23.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
is_pressed = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "No label"
flat = false
align = 0

[node name="ordinate" type="CheckBox" parent="group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 23.0
margin/right = 132.0
margin/bottom = 46.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Ordinates labels"
flat = false
align = 0

[node name="absciss" type="CheckBox" parent="group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 46.0
margin/right = 132.0
margin/bottom = 69.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Abscisses labels"
flat = false
align = 0

[node name="legend" type="CheckBox" parent="group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 69.0
margin/right = 132.0
margin/bottom = 92.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Legend labels"
flat = false
align = 0

[node name="all" type="CheckBox" parent="group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 92.0
margin/right = 132.0
margin/bottom = 115.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "All labels"
flat = false
align = 0

[node name="split" type="ColorFrame" parent="."]

rect/min_size = Vector2( 132, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 243.0
margin/right = 160.0
margin/bottom = 244.0
color = Color( 0, 0, 0, 1 )

[node name="groupType" type="ButtonGroup" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 28.0
margin/top = 256.0
margin/right = 163.0
margin/bottom = 325.0
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="line" type="CheckBox" parent="groupType"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 135.0
margin/bottom = 23.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
is_pressed = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Line chart"
flat = false
align = 0

[node name="pie" type="CheckBox" parent="groupType"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 23.0
margin/right = 135.0
margin/bottom = 46.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Pie chart"
flat = false
align = 0

[node name="japanese" type="CheckBox" parent="groupType"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 46.0
margin/right = 135.0
margin/bottom = 69.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Japanese candles"
flat = false
align = 0

[node name="histobar" type="CheckBox" parent="groupType"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 69.0
margin/right = 135.0
margin/bottom = 92.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Histobar"
flat = false
align = 0

[node name="histogram" type="CheckBox" parent="groupType"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 92.0
margin/right = 135.0
margin/bottom = 115.0
custom_colors/font_color = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_hover = Color( 0.172549, 0.192157, 0.215686, 1 )
custom_colors/font_color_pressed = Color( 0.172549, 0.192157, 0.215686, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Histogram"
flat = false
align = 0

[node name="container" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 360.0
margin/top = 20.0
margin/right = 680.0
margin/bottom = 96.0
alignment = 0

[node name="controls" type="HBoxContainer" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 48.0
custom_constants/separation = 64
alignment = 0

[node name="clear" type="Button" parent="container/controls"]

rect/min_size = Vector2( 128, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 128.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Clear"
flat = false

[node name="add_data" type="Button" parent="container/controls"]

rect/min_size = Vector2( 128, 48 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 192.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Add data"
flat = false

[node name="maxValues" type="SpinBox" parent="container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 52.0
margin/right = 320.0
margin/bottom = 76.0
range/min = 1.0
range/max = 99999.0
range/step = 1.0
range/page = 0.0
range/value = 12.0
range/exp_edit = false
range/rounded = true
editable = true
prefix = ""
suffix = ""

[node name="benchmark" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
alignment = 0

[node name="fps" type="Label" parent="benchmark"]

rect/min_size = Vector2( 128, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 128.0
margin/bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="points" type="Label" parent="benchmark"]

rect/min_size = Vector2( 128, 32 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 36.0
margin/right = 128.0
margin/bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="group/noLabel" to="chart" method="set_labels" binds= [ 0 ]]

[connection signal="pressed" from="group/ordinate" to="chart" method="set_labels" binds= [ 1 ]]

[connection signal="pressed" from="group/absciss" to="chart" method="set_labels" binds= [ 2 ]]

[connection signal="pressed" from="group/legend" to="chart" method="set_labels" binds= [ 4 ]]

[connection signal="pressed" from="group/all" to="chart" method="set_labels" binds= [ 7 ]]

[connection signal="pressed" from="groupType/line" to="." method="set_chart_type" binds= [ 0 ]]

[connection signal="pressed" from="groupType/pie" to="." method="set_chart_type" binds= [ 1 ]]

[connection signal="pressed" from="groupType/japanese" to="." method="set_chart_type" binds= [ 2 ]]

[connection signal="pressed" from="groupType/histobar" to="." method="set_chart_type" binds= [ 3 ]]

[connection signal="pressed" from="groupType/histogram" to="." method="set_chart_type" binds= [ 4 ]]

[connection signal="pressed" from="container/controls/clear" to="chart" method="clear_chart"]

[connection signal="pressed" from="container/controls/add_data" to="." method="reset"]

[connection signal="value_changed" from="container/maxValues" to="chart" method="set_max_values"]


